--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,1 +1,7 @@
+server.port=8081
 spring.profiles.active=test
+spring.datasource.url=jdbc:h2:tcp://localhost/~/testcase
+spring.datasource.username=sa
+
+#jdbcTemplate sql log
+logging.level.org.springframework.jdbc=debug
